@@ -20,6 +20,7 @@
             Fix Array.forEach when deleting the item you're currently iterating over (fix #1962)
             Bangle.js: StorageFile now uses 10x bigger chunks which reduces stress on Storage.list()
             Storage.list now allows you to specifically request StorageFile, only ever reports first StorageFile chunk
+            Graphics: Allow colors to be specified as '#rgb' strings
  
      2v08 : nRF52: Added option to build in I2C slave support
             Fix Tensorflow aiGesture regression from 2v07 (re-add opcodes) (fix #1936)
